Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -915,7 +915,7 @@
     "machines": "Maschinen",
     "macro-account-note-info": "Schlüssel zur Werteersetzung im Makro",
     "mail-server-error": "Error al conectar al servidor de correo",
-    "mail-test-error": "mail-test-error",
+    "mail-test-error": "E-Mail-Testfehler",
     "mail-test-ok": "Erfolgreicher E-Mail-Test",
     "mailer": "Mail-Controller",
     "main-address": "Hauptadresse",
@@ -969,9 +969,9 @@
     "month-1": "Enero",
     "month-10": "Oktober",
     "month-11": "Noeviembre",
-    "month-12": "Diciembre",
+    "month-12": "Dezember",
     "month-2": "Febrero",
-    "month-3": "M",
+    "month-3": "März",
     "month-4": "Abril",
     "month-5": "Mai",
     "month-6": "Juni",
@@ -1006,7 +1006,7 @@
     "new-invoice-line-p": "Sie können ein Produkt hinzufügen, indem Sie auf die Produkt-Schaltfläche klicken oder dessen Referenz oder Barcode im Barcode-Feld eingeben. Oder drücken Sie die Linien-Schaltfläche für eine Linie ohne Produkt.",
     "new-password": "neues Passwort",
     "new-price": "Neuer Preis",
-    "new-refund": "new-refund",
+    "new-refund": "neue Rückerstattung",
     "new-supplier": "Neuer Lieferant",
     "news": "Nachrichten",
     "next": "Nächster",
@@ -1041,9 +1041,9 @@
     "notes": "Anmerkungen",
     "notice": "Aviso",
     "notices": "Bemerkungen",
-    "notification": "Notificación",
+    "notification": "Benachrichtigung",
     "notifications": "Notificaciones",
-    "november": "Noviembre",
+    "november": "November",
     "number": "Nummer",
     "number-attachments": "Nº de adjuntos",
     "number-length": "number-length",
@@ -1062,7 +1062,7 @@
     "only-pending": "Nur ausstehend",
     "only-suspended": "Nur ausgesetzt",
     "open": "öffnen",
-    "open-exercise": "open-exercise",
+    "open-exercise": "Übung öffnen",
     "open-tab": "Abrir en una nueva pestaña",
     "opened": "Opened",
     "opening-acounting-completed": "Buchhaltungseröffnung abgeschlossen",
@@ -1138,7 +1138,7 @@
     "phone2": "Telefon 2",
     "phones": "Telefonnummern",
     "php-extension-needed": "PHP-Erweiterung benötigt: %extension%",
-    "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
+    "php-extension-not-found": "Sie haben die PHP-Erweiterung %extension% nicht installiert.",
     "php-support-end": "PHP-Endsupport",
     "physical-stock": "Physischer Bestand",
     "picking": "P",
@@ -1386,7 +1386,7 @@
     "show-quantity": "Show quantity on print",
     "show-section-new": "Mostrar sección crear",
     "signature": "Unterschrift",
-    "simple": "Simple",
+    "simple": "Einfach",
     "simplified": "Vereinfacht",
     "size": "Größe",
     "sketch": "Boceto",
@@ -1436,7 +1436,7 @@
     "subaccount": "Unterkonten",
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
     "subaccount-belongs-other-year": "Unterkonto 0 gehört zu einem anderen Geschäftsjahr.",
-    "subaccount-irpf": "Account for deductions",
+    "subaccount-irpf": "Konto für Abzüge",
     "subaccount-irpf-creditor": "subaccount-irpf-creditor",
     "subaccount-not-found": "Unterkonto 0 wurde nicht gefunden.",
     "subaccount-purchases": "Account for purchases",
@@ -1517,12 +1517,12 @@
     "this-last-fortnight": "this-last-fortnight",
     "this-last-month": "diesen letzten Monat",
     "this-last-week": "this-last-week",
-    "this-last-year": "this-last-year",
+    "this-last-year": "das letzte Jahr",
     "this-month": "this-month",
     "this-week": "this-week",
-    "this-year": "this-year",
+    "this-year": "dieses Jahr",
     "thousands-separator": "Tausende",
-    "thursday": "thursday",
+    "thursday": "Donnerstag",
     "ticket": "Ticket",
     "tickets": "T",
     "time": "Zeit",
@@ -1538,7 +1538,7 @@
     "total-amount": "total-amount",
     "total-cost": "total-cost",
     "total-purchases": "total-purchases",
-    "total-sales": "total-sales",
+    "total-sales": "Gesamtverkäufe",
     "total-value-error": "Gesamtmenge von 0 1 falsch (2). Richtige Menge: 3",
     "total-with-taxes": "Gesamt mit Steuern",
     "totalirpf-value-error": "Gesamt-IRPF-Betrag von 0 1 falsch (2). Richtige Menge: 3",
@@ -1561,11 +1561,11 @@
     "type-debug": "Type debug",
     "type-emergency": "Type emergency",
     "type-error": "Type error",
-    "type-info": "Type info",
+    "type-info": "Informationstyp",
     "type-notice": "Type notice",
     "type-success": "type-success",
-    "type-warning": "Type warning",
-    "unbalance": "Unbalance",
+    "type-warning": "Warnungstyp",
+    "unbalance": "Unausgeglichen",
     "unbalanced-entry": "Asiento descuadrado",
     "unchecked": "unchecked",
     "under-minimums": "under-minimums",
@@ -1615,7 +1615,7 @@
     "vat-document": "Steuerdokument",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "Die Nummer '%vat-number%' ist zu kurz",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-not-vies": "Die Nummer '%vat-number%' ist nicht im VIES-System registriert",
     "vat-regime": "MwSt-Regelung",
     "VAT-register": "Steuerbuch",
     "vat-regularization": "MwSt Regulierung",
@@ -1624,7 +1624,7 @@
     "version": "Version",
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
-    "view-api": "Ver API",
+    "view-api": "API anzeigen",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "view-estimation": "Ver presupuesto",
     "view-order": "Ver pedido",
