--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -142,7 +142,7 @@
     "badge": "Distintivo",
     "balance": "Bilancio",
     "balance-account": "Bilancio contabile",
-    "balance-account-abreviated": "Balance account abreviated",
+    "balance-account-abreviated": "Bilancio abbreviato delle aziende",
     "balance-amounts": "Trial Balance",
     "balance-sheet": "Bilancio",
     "balance-sheets": "Balance Sheets",
@@ -205,7 +205,7 @@
     "cant-load-controller": "Impossibile caricare il controller.",
     "cant-modify-reference": "Non modificare il riferimento.",
     "cant-remove-accounting-entry": "impossibile rimuovere l'entrata contabile",
-    "cant-remove-invoice-refund": "Impossibile eliminare una fattura che ha già una fattura di rimborso",
+    "cant-remove-invoice-refund": "Impossibile eliminare una fattura che ha già una nota di credito",
     "cant-remove-receipt": "impossibile rimuovere il ricevimento",
     "cant-update-audit-log": "Impossibile aggiornare un registro di audit",
     "card": "Carta",
@@ -217,9 +217,9 @@
     "cc": "CC",
     "center": "Center",
     "change": "cambiamento",
-    "channel": "channel",
+    "channel": "canale",
     "charge-date": "Data del addebito",
-    "chart": "Chart",
+    "chart": "Grafico",
     "charts": "grafici",
     "chat": "Chat",
     "check-table": "Il controllo degli errori tabella% 1 $ s",
@@ -386,7 +386,7 @@
     "date-wildcard-info": "Data attuale (data del computer)",
     "dateentry-wildcard-info": "dateentry-wildcard-info",
     "day": "giorno",
-    "days": "days",
+    "days": "giorni",
     "days-log-retention": "giorni di conservazione log",
     "days-until-expiration": "giorni-fino-scadenza",
     "db-host": "Database del server",
@@ -771,10 +771,10 @@
     "interest": "Interesse",
     "international-identifier": "Identificatore internazionale",
     "intra-community": "Intra-comunitaria",
-    "invalid-alphanumeric-code": "invalid-alphanumeric-code",
+    "invalid-alphanumeric-code": "Il codice inserito (%value%) non è valido. (%column%) deve contenere tra %min% e %max% numeri o lettere, senza spazi, accenti o altri caratteri.",
     "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
     "invalid-date": "Data% 1 $ s non è valida.",
-    "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
+    "invalid-date-there-are-invoices-after": "Data non valida: %date%. La fattura %other% è successiva eppure ha data precedente: %other-date%. Ogni fattura deve avere data precedente o uguale a quella successiva.",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
     "invalid-iban": "IBAN invalido %iban%",
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
@@ -805,22 +805,22 @@
     "is-creditor": "È creditore",
     "is-person": "È una persona fisica",
     "iso": "ISO",
-    "issued": "Issued",
+    "issued": "Emitido",
     "item-limit": "Elementi per pagina",
     "items-added-correctly": "%num% elemento\/i aggiunti correttamente",
     "items-removed-correctly": "elementi rimossi correttamente",
     "ivarep-subaccount-not-found": "Subconto IVA non trovato",
-    "ivasop-account-not-found": "ivasop-account-not-found",
+    "ivasop-account-not-found": "Conto Ivasop non trovato",
     "january": "Enero",
     "job-name": "Nome del lavoro",
-    "journal": "Journal",
+    "journal": "Giornale",
     "journal-closing": "Chiusura giornale",
     "journal-opening": "journal-opening",
     "journals": "Journals",
     "july": "Luglio",
     "june": "Giugno",
     "justified": "giustificato",
-    "key-google-maps": "Clave de Google Maps",
+    "key-google-maps": "Chiave di Google Maps",
     "keys": "keys",
     "lang-code": "Codice della lingua",
     "language": "Lingua",
@@ -841,7 +841,7 @@
     "languages-es_PE": "languages-es_PE",
     "languages-es_UY": "languages-es_UY",
     "languages-eu_ES": "languages-eu_ES",
-    "languages-fr_FR": "languages-fr_FR",
+    "languages-fr_FR": "Francese",
     "languages-gl_ES": "lingue-gl_ES",
     "languages-it_IT": "Italiano",
     "languages-pl_PL": "Polaco",
@@ -873,7 +873,7 @@
     "level1": "Livello 1",
     "level2": "Livello 2",
     "level3": "Livello 3",
-    "level4": "Level 4",
+    "level4": "Livello 4",
     "liabilities": "passività",
     "library": "Biblioteca",
     "license": "Licenza",
@@ -966,16 +966,16 @@
     "model-not-found": "model-not-found",
     "monday": "lunedì",
     "month": "Mese",
-    "month-1": "Enero",
+    "month-1": "Gennaio",
     "month-10": "Ottobre",
     "month-11": "Noeviembre",
     "month-12": "Dicembre",
-    "month-2": "Febrero",
+    "month-2": "Febbraio",
     "month-3": "Marzo",
     "month-4": "Abril",
     "month-5": "Mayo",
     "month-6": "Junio",
-    "month-7": "Julio",
+    "month-7": "Luglio",
     "month-8": "Agosto",
     "month-9": "settembre",
     "month-name": "Month Name",
@@ -996,7 +996,7 @@
     "name-or-business-name": "Name or Bussine name",
     "nature": "Natura",
     "need-help-password": "necessita aiuto con la password",
-    "negative-balance": "negative-balance",
+    "negative-balance": "Saldo negativo",
     "net": "Netto",
     "new": "Nuovo",
     "new-acc-entry-line-p": "Puoi inserire una linea scrivendo il codice della sottoconto qui sotto o premendo il pulsante sottoconti e selezionando un sottoconto.",
@@ -1025,12 +1025,12 @@
     "non-editable-accounting-entry": "non-editable-accounting-entry",
     "non-editable-columns": "Colonna non modificabile: %columns%",
     "non-editable-document": "Documento non modificabile",
-    "none": "None",
+    "none": "Nessuno",
     "normal": "normale",
     "not-allowed-delete": "not-allowed-delete",
     "not-allowed-modify": "Non si è autorizzati a modificare",
     "not-enough-stock": "not-enough-stock",
-    "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
+    "not-passed-integrity-check": "Alcuni file non hanno superato il controllo di integrità...<br\/>Puoi <a class='alert-link' target='_blank' href='IntegritySystemCheck'>ottenere ulteriori dettagli qui<\/a>.",
     "not-public": "Non pubblico",
     "not-stored-content": "Contenuto non memorizzato",
     "not-valid-email": "Email non valida %email%",
@@ -1039,7 +1039,7 @@
     "not-valid-percentage-retention": "Percentuale di ritenzione non valida. Deve essere superiore a 0.00",
     "note": "note",
     "notes": "Gli appunti",
-    "notice": "Aviso",
+    "notice": "Avviso",
     "notices": "Avvisi",
     "notification": "Notifica",
     "notifications": "Notificaciones",
@@ -1122,7 +1122,7 @@
     "pct-surcharge": "% Sovrapprezzo",
     "pct-tax": "% impuestos",
     "pct-vat": "% IVA",
-    "pending": "pending",
+    "pending": "in attesa",
     "pending-invoices-button": "Fatture in sospeso:",
     "pending-orders-button": "pending-orders-button",
     "pending-reception": "ricezione in sospeso",
@@ -1176,7 +1176,7 @@
     "preview": "preview",
     "previous": "precedente",
     "previous-balance": "Previous Balance",
-    "previous-documents": "previous-documents",
+    "previous-documents": "Documenti precedenti",
     "previous-quarter": "Trimestre precedente",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
     "previously-sold-to-customer": "Venduto precedentemente al cliente",
@@ -1238,7 +1238,7 @@
     "rebuild": "ricostruire",
     "rebuild-completed": "Ricostruzione completata",
     "rebuild-stock": "rebuild-stock",
-    "receipt": "receipt",
+    "receipt": "ricevuta",
     "receipt-expense-account": "receipt-expense-account",
     "receipts": "ricevute",
     "record-deleted-correctly": "Record cancellato correttamente!",
@@ -1251,7 +1251,7 @@
     "rectified-invoice-p": "Le fatture sono documenti commerciali e hanno una serie di restrizioni legali. Non possono essere eliminate o modificate. Sono ammesse solo restituzioni totali o parziali. Utilizzare questo modulo per eseguire un reso su questa fattura.",
     "rectified-invoices": "Fatture correttive",
     "rectifying": "Rectificativa",
-    "rectifying-serie": "rectifying-serie",
+    "rectifying-serie": "serie correttiva",
     "redirect": "Redirección",
     "reference": "Riferimento",
     "reference+description": "Reference + Description",
@@ -1285,7 +1285,7 @@
     "renumber-invoices-p": "Rinumerare le fatture in base alla data, da minore a maggiore",
     "renumber-invoices-success": "Le fatture dell'esercizio '%exercise%' sono state rinumerate correttamente",
     "repeat-new-password": "Ripetere la password",
-    "repeat-password": "Repetir contraseña",
+    "repeat-password": "Ripeti password",
     "reply": "risposta",
     "report": "report",
     "report-grouping-account": "Group by account",
@@ -1302,7 +1302,7 @@
     "restore": "ripristina",
     "restore-data": "Ripristinare i dati",
     "result": "Risultato",
-    "retention": "retention",
+    "retention": "ritenzione",
     "retentions": "Retentions",
     "review-date": "Data della recensione",
     "right": "Destra",
@@ -1335,7 +1335,7 @@
     "select-plugin-zip-file": "Seleziona il file zip del plugin:",
     "select-user": "Seleziona Utente",
     "selected-quantity": "Quantità selezionata",
-    "selector-number": "Selector",
+    "selector-number": "Selettore",
     "send": "Invia",
     "send-anonymous-data": "Invio di dati anonimi",
     "send-audios": "Enviar audios",
@@ -1344,7 +1344,7 @@
     "send-invoices": "Invia fatture",
     "send-location": "Enviar ubicación",
     "send-mail": "Send mail",
-    "send-mail-error": "send-mail-error",
+    "send-mail-error": "Errore nell'invio dell'email",
     "send-mail-ok": "send-mail-ok",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Envió un audio",
@@ -1354,7 +1354,7 @@
     "sent-a-video": "Ha inviato un video",
     "sent-message-by": "Inviato da %nick% il %date%",
     "sepa-suffix": "sepa-suffix",
-    "september": "Septiembre",
+    "september": "Settembre",
     "sequences": "Sequenze",
     "serial-number": "Serial Number",
     "serie": "serie",
@@ -1432,7 +1432,7 @@
     "stripe": "Stripe",
     "structured-data-csv": "File CSV",
     "sub-account": "Account secondario",
-    "sub-type": "sub-type",
+    "sub-type": "sotto tipo",
     "subaccount": "sottoconti",
     "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
     "subaccount-belongs-other-year": "Il sottoconto 0 appartiene a un altro anno finanziario.",
@@ -1441,12 +1441,12 @@
     "subaccount-not-found": "Account secondario 0 non trovato.",
     "subaccount-purchases": "Account for purchases",
     "subaccount-pyg-not-found": "subaccount-pyg-not-found",
-    "subaccount-sales": "Cuenta de ventas",
+    "subaccount-sales": "Conto vendite",
     "subaccounts": "sottoconti",
     "subfamilies": "Sottocategoria",
     "subject": "Oggetto",
     "subtotal": "subtotal",
-    "subtract": "Subtract",
+    "subtract": "Sottrarre",
     "success": "successo",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La somma della rete delle linee IVA dovrebbe essere: 0",
@@ -1497,7 +1497,7 @@
     "tax-area": "tax-area",
     "tax-areas": "aree fiscali",
     "tax-base": "Base Imponibile",
-    "tax-credit-account": "Credit account for taxes",
+    "tax-credit-account": "Conto di credito per tasse",
     "tax-debit-account": "Conto addebito per tasse",
     "tax-transport": "Trasporto fiscale",
     "taxes": "Le tasse",
@@ -1525,7 +1525,7 @@
     "thursday": "giovedì",
     "ticket": "Ticket",
     "tickets": "Tickets",
-    "time": "Time",
+    "time": "Tempo",
     "timezone": "Seleziona il fuso orario",
     "title": "Titolo",
     "title-font-size": "Dimensione del carattere del titolo",
@@ -1552,7 +1552,7 @@
     "transfers-stock": "Transfers stock",
     "translation": "Traduzione",
     "translations": "Traduzioni",
-    "travel": "Viaje",
+    "travel": "Viaggio",
     "try-again-later": "try-again-later",
     "tuesday": "tuesday",
     "type": "tipo",
@@ -1560,7 +1560,7 @@
     "type-critical": "Type critical",
     "type-debug": "Tipo debug",
     "type-emergency": "Type emergency",
-    "type-error": "Type error",
+    "type-error": "Tipo di errore",
     "type-info": "Tipo informazioni",
     "type-notice": "Tipo di avviso",
     "type-success": "type-success",
@@ -1605,8 +1605,8 @@
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo di valutazione",
     "value": "Valore",
-    "value-x": "value-x",
-    "value-y": "value-y",
+    "value-x": "valore X",
+    "value-y": "Valore Y",
     "values": "valori",
     "variables": "Variables",
     "variant": "Variante",
@@ -1647,7 +1647,7 @@
     "without-closure": "without-closure",
     "without-domicile": "Senza domicilio",
     "without-groups": "Senza gruppo",
-    "without-regularization": "without-regularization",
+    "without-regularization": "Senza regolarizzazione",
     "without-tax": "Senza tasse",
     "without-taxation": "Senza tasse",
     "wizard": "wizard",
