--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -65,7 +65,7 @@
     "adult": "Adulto",
     "advanced": "Avanzado",
     "agent": "Agent",
-    "agent-commission-info": "Sólo se aplicará al agente seleccionado",
+    "agent-commission-info": "Dotyczy tylko wybranego agenta",
     "agent-dont-have-associated-supplier": "El agente no tiene un proveedor asociado",
     "agents": "Agentes",
     "alert": "Alerta",
@@ -186,7 +186,7 @@
     "cant-assing-subaccount-supplier": "Imposible asociar la subcuenta para el proveedor %supplierCode%",
     "cant-associate-customer-subaccount": "Imposible asociar la subcuenta para el cliente %customerCode%",
     "cant-change-accounting-entry-exercise": "No se puede cambiar el ejercicio del asiento. Cree un asiento nuevo.",
-    "cant-change-agent-in-settlement": "No puede cambiar el agente. La comisión ya está liquidada.",
+    "cant-change-agent-in-settlement": "Nie można zmienić agenta. Prowizja jest już rozliczona.",
     "cant-connect-database": "Nie można połączyć z bazą danych",
     "cant-convert-to-innodb": "Imposible convertir la tabla '%tableName%' a InnoDB. Imprescindible para FacturaScripts.",
     "cant-create-customer-subaccount": "Imposible crear la subcuenta para el cliente %customerCode%",
@@ -195,7 +195,7 @@
     "cant-delete-audit-log": "Nie można usunąć logu audytu",
     "cant-delete-default-company": "No se puede eliminar la empresa predeterminada",
     "cant-delete-default-country": "Nie można usunąć domyślnego kraju",
-    "cant-delete-default-currency": "No se puede eliminar la divisa por defecto",
+    "cant-delete-default-currency": "Nie można usunąć waluty domyślnej",
     "cant-delete-default-payment-method": "No se puede eliminar la forma de pago predeterminada",
     "cant-delete-default-serie": "No se puede eliminar la serie predeterminada",
     "cant-delete-default-tax": "No se puede eliminar el impuesto predeterminado",
@@ -241,7 +241,7 @@
     "clone": "Duplicar",
     "clone-account-entry": "Klonuj wpis księgowy",
     "close": "Cerrar",
-    "close-box": "Cerrar caja",
+    "close-box": "Zamknij pudełko",
     "close-exercise": "Zakończć ćwiczenia",
     "closed": "Cerrado",
     "closed-exercise": "El ejercicio %exerciseName% está cerrado.",
@@ -370,7 +370,7 @@
     "dasboard-backup-li2": "Jeśli usuniesz lub odinstalujesz XAMPP, stracisz dane.",
     "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
     "dashboard": "Tablica",
-    "dashboard-backup": "Copia de seguridad",
+    "dashboard-backup": "Kopia zapasowa",
     "dashboard-backup-p": "Przypominamy, że masz zainstalowany FacturaScripts na swoim PC, dlatego dane (faktury, klienci, itp...) są przechowywane tylko na Twoim PC. Regularnie twórz kopie zapasowe i przechowuj je z dala od komputera.",
     "dashboard-for": "Tablero de %company%",
     "data-source": "Datos de origen",
@@ -378,7 +378,7 @@
     "database-error": "Błąd połączenia z bazą danych",
     "database-name-must-be-lowercase": "El nombre de la base de datos debe ser en minúsculas",
     "date": "Data",
-    "date-in": "Fecha entrada",
+    "date-in": "Data wejścia",
     "date-of-suspension": "Data zawieszenia",
     "date-of-the-document": "Fecha del documento a generar",
     "date-out": "Fecha salida",
@@ -581,7 +581,7 @@
     "exercise-date-out-range": "La fecha no está en el periodo del ejercicio.",
     "exercise-date-range-exists": "Istnieje już ćwiczenie w tym przedziale dat (%start% - %end%)",
     "exercise-not-found": "Ejercicio no encontrado.",
-    "exercise-without-accounting-plan": "El ejercicio %exercise% todavía no tiene plan contable",
+    "exercise-without-accounting-plan": "Ćwiczenie %exercise% nie ma jeszcze planu rachunkowego",
     "exercises": "Ejercicios",
     "exit": "Salir",
     "expedient": "Expediente",
@@ -752,7 +752,7 @@
     "import-file": "Plik importu",
     "in-progress": "W trakcie",
     "in-stock": "En stock",
-    "inactive": "Inactivo",
+    "inactive": "Nieaktywny",
     "income-and-expenses": "Ingresos y Gastos",
     "incompatible-document": "Documento incompatible: %code%. Para poder agrupar documentos deben tener el mismo cliente o proveedor, serie, almacén, divisa y descuento global.",
     "incompatible-with-facturascripts": "Incompatible con la versión %version% de FacturaScripts",
@@ -787,8 +787,8 @@
     "invoice-email-text": "Estimado cliente,  A continuación le adjuntamos la factura correspondiente a los servicios prestados. Si tienes cualquier consulta puede responder a este mismo email.  ¡Muchas gracias! Un saludo,",
     "invoice-has-no-receipts": "La factura no tiene recibos. Cree alguno desde la pestaña recibos.",
     "invoice-have-rectifying-cant-delete": "Faktura ma już korektę. Nie można jej usunąć.",
-    "invoice-new-assigned-date": "Ya hay facturas posteriores a la fecha seleccionada (%oldDate%). Nueva fecha asignada: %newDate%",
-    "invoice-number": "Número de factura",
+    "invoice-new-assigned-date": "Istnieją już faktury po wybranej dacie (%oldDate%). Nowa data przypisana: %newDate%",
+    "invoice-number": "Numer faktury",
     "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
     "invoice-regularized-cant-change-date": "La factura se encuentra dentro de una regularización de %tax%. No se puede modificar la fecha.",
     "invoice-regularized-cant-delete": "La factura se encuentra dentro de una regularización de %tax% No se puede eliminar.",
@@ -839,7 +839,7 @@
     "languages-es_MX": "Español (México)",
     "languages-es_PA": "Español (Panamá)",
     "languages-es_PE": "Español (Perú)",
-    "languages-es_UY": "Español (Uruguay)",
+    "languages-es_UY": "Hiszpański (Urugwaj)",
     "languages-eu_ES": "Euskera",
     "languages-fr_FR": "Francuski",
     "languages-gl_ES": "Gallego",
@@ -1005,7 +1005,7 @@
     "new-customers": "Nowi klienci",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
     "new-password": "Nueva contraseña",
-    "new-price": "Nuevo precio",
+    "new-price": "Nowa cena",
     "new-refund": "Nueva devolución",
     "new-supplier": "Nuevo proveedor",
     "news": "Noticias",
@@ -1048,7 +1048,7 @@
     "number-attachments": "Liczba załączników",
     "number-length": "Longitud del número",
     "number-recipients": "Liczba odbiorców",
-    "number2": "Número 2",
+    "number2": "Numer 2",
     "numeric-formats": "Formaty numeryczne",
     "numsupplier": "Núm. proveedor",
     "observations": "Observaciones",
@@ -1083,7 +1083,7 @@
     "original-file": "Plik oryginalny",
     "other-data": "Otros datos",
     "others-filters": "Inne filtry",
-    "out-of-stock": "Sin stock",
+    "out-of-stock": "Brak towaru",
     "page": "Página",
     "page-break": "Złamanie strony",
     "page-configuration": "Página de Configuración",
@@ -1234,7 +1234,7 @@
     "react": "Reaccionar",
     "read-message-by": "Leído por %nick% el %date%",
     "read-more": "Leer más",
-    "readonly": "Sólo lectura",
+    "readonly": "Tylko do odczytu",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Przebudowa zakończona",
     "rebuild-stock": "Reconstruir stock",
@@ -1267,7 +1267,7 @@
     "registered-installation": "Instalación registrada #%number%",
     "registered-installation-p": "Esta instalación ya ha sido registrada. Si tienes plugins de pago, pulsa el botón administrar para vincularlos y poder actualizar.",
     "regularization-operation": "Regularización",
-    "reject": "Rechazar",
+    "reject": "Odrzuć",
     "rejected": "Rechazado",
     "related": "Powiązane",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
@@ -1336,7 +1336,7 @@
     "select-user": "Seleccionar usuario",
     "selected-quantity": "Ilość wybrana",
     "selector-number": "Wybierający numer",
-    "send": "Enviar",
+    "send": "Wysłać",
     "send-anonymous-data": "Wysyłanie anonimowych danych",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
@@ -1513,7 +1513,7 @@
     "text-color": "Color de texto",
     "texts": "Textos",
     "third-quarter": "3º trimestre",
-    "third-trimester": "Tercer trimestre",
+    "third-trimester": "Trzeci kwartał",
     "this-last-fortnight": "Los últimos 15 días",
     "this-last-month": "Los últimos 30 días",
     "this-last-week": "Los últimos 7 días",
@@ -1578,7 +1578,7 @@
     "unlink-file": "Desvincular archivo",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
     "unlock-entry": "Desbloquear",
-    "unpaid": "Impagado",
+    "unpaid": "Nieopłacone",
     "until-accounting-entry": "Hasta asiento",
     "until-date": "Hasta",
     "until-subaccount": "Hasta subcuenta",
@@ -1609,7 +1609,7 @@
     "value-y": "Valor Y",
     "values": "Valores",
     "variables": "Variables",
-    "variant": "Variante",
+    "variant": "Wariant",
     "variants": "Variantes",
     "vat": "VAT",
     "vat-document": "Documento",
@@ -1643,7 +1643,7 @@
     "width": "Ancho",
     "wildcard": "Comodín",
     "wildcard-general-info": "Se substituirá por el valor correspondiente",
-    "wildcard-title": "Comodines reemplazables por valor",
+    "wildcard-title": "Zmienna zastępująca wartość",
     "without-closure": "Sin el cierre",
     "without-domicile": "Sin domiciliar",
     "without-groups": "Bez grup",
@@ -1651,7 +1651,7 @@
     "without-tax": "Sin IVA",
     "without-taxation": "Bez opodatkowania",
     "wizard": "Asistente",
-    "wizard-p": "Rellene este formulario sobre su negocio para terminar la configuración.",
+    "wizard-p": "Wypełnij ten formularz dotyczący swojej firmy, aby zakończyć konfigurację.",
     "wizard-plugins": "Un plugin es un complemento que añade nuevas funcionalidades. Selecciona los plugins que quieras activar inmediatamente, o hazlo más tarde desde el panel de control.",
     "work-events": "Wydarzenia pracy",
     "working-hours": "Horario de trabajo",
