--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -203,7 +203,7 @@
     "cant-delete-last-user": "No se puede eliminar el último usuario",
     "cant-delete-variant-with-documents": "Não é possível excluir o produto ou variante %reference% porque já foi comprado ou vendido. Mas você pode bloqueá-lo se desejar.",
     "cant-load-controller": "Não é possível carregar o controlador '%controllerName%'.",
-    "cant-modify-reference": "Não pode editar a referência.",
+    "cant-modify-reference": "Impossível modificar a referência.",
     "cant-remove-accounting-entry": "No se puede eliminar la entrada contable",
     "cant-remove-invoice-refund": "Não é possível remover uma fatura que já possui devolução",
     "cant-remove-receipt": "No se puede eliminar el recibo",
@@ -215,7 +215,7 @@
     "categories": "Categorías",
     "category": "Categoria",
     "cc": "CC",
-    "center": "Center",
+    "center": "Centro",
     "change": "mudar",
     "channel": "Canal",
     "charge-date": "Data de cobrança",
@@ -266,7 +266,7 @@
     "colors": "cores",
     "column": "Coluna",
     "columns": "Columns",
-    "combination-code": "Combination code",
+    "combination-code": "Código de combinação",
     "combinations": "Combinações",
     "commercial-terms": "Termos comerciais",
     "commission": "commission",
@@ -366,8 +366,8 @@
     "customers": "clientes",
     "customize": "Personalizar",
     "daily": "Daily",
-    "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
-    "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
+    "dasboard-backup-li1": "Se excluir ou desinstalar o FacturaScripts, perderá os dados.",
+    "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
     "dashboard": "painel de controle",
     "dashboard-backup": "Copia de seguridad",
@@ -394,7 +394,7 @@
     "db-password": "Senha da base de dados",
     "db-port": "Porta do banco de dados",
     "db-type": "Tipo de servidor SQL",
-    "db-type-not-recognized": "Conexão de tipo de banco de dados não reconhecida. Deve ser MySQL ou PostgreSQL",
+    "db-type-not-recognized": "Tipo de banco de dados não reconhecido. Deve ser MySQL ou PostgreSQL",
     "db-user": "Usuário de banco de dados",
     "debit": "Débito",
     "debug-mode": "Modo de depuração",
@@ -411,7 +411,7 @@
     "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
     "delete-all": "Eliminar tudo",
-    "delete-closing": "delete-closing",
+    "delete-closing": "Eliminar fecho",
     "delete-data": "Eliminar dados",
     "delete-file": "Eliminar ficheiro",
     "delete-logs": "Excluir logs",
@@ -510,7 +510,7 @@
     "email-replies-to": "email-replies-to",
     "email-sent": "Email enviado",
     "email-sent-to": "Email enviado para %email%",
-    "email-signature": "email-signature",
+    "email-signature": "Assinatura de email",
     "email-to": "Email To",
     "emails": "E-mails",
     "emails-sent": "E-mails enviados",
@@ -534,7 +534,7 @@
     "equivalence": "Equivalência",
     "equivalent-account-not-found": "Não foi possível encontrar uma conta equivalente a 0 no exercício 1 <a href='2'> Você importou o quadro das contas? <\/a>",
     "equivalent-subaccount-not-found": "Não foi encontrado nenhuma subconta equivalente a %subAccountCode% para copiar.",
-    "error": "ERRO: 0",
+    "error": "ERRO: %error%",
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
     "error-connecting-memcache": "Erro ao conectar ao servidor Memcache.",
     "error-deleting-lines": "Erro ao excluir linhas",
@@ -786,7 +786,7 @@
     "invoice-email-subject": "A sua fatura %code%",
     "invoice-email-text": "Olá, vai anexa a sua fatura %code%",
     "invoice-has-no-receipts": "A fatura não tem recibos. Crie um na aba de recibos.",
-    "invoice-have-rectifying-cant-delete": "A factura já possui uma retificação. Não pode ser excluído.",
+    "invoice-have-rectifying-cant-delete": "A fatura já possui uma retificação. Não pode ser excluída.",
     "invoice-new-assigned-date": "Já existem faturas com data superior a (%oldDate%). Nova data atribuída: %newDate%",
     "invoice-number": "Número da factura",
     "invoice-receipts-diff": "Há uma diferença (%diff%) entre o valor da fatura e a soma de seus recibos.",
@@ -807,7 +807,7 @@
     "iso": "ISO",
     "issued": "Emitido",
     "item-limit": "Itens por página",
-    "items-added-correctly": "items-added-correctly",
+    "items-added-correctly": "%num% itens adicionados corretamente",
     "items-removed-correctly": "%num% items eliminados corretamente",
     "ivarep-subaccount-not-found": "Subconta de IVA repassado não encontrada",
     "ivasop-account-not-found": "Conta de IVA não encontrada",
@@ -913,7 +913,7 @@
     "low-security": "Baixa Segurança",
     "machine": "machine",
     "machines": "máquinas",
-    "macro-account-note-info": "Keys for values replacement macro",
+    "macro-account-note-info": "Chaves para macro de substituição de valores",
     "mail-server-error": "Error al conectar al servidor de correio",
     "mail-test-error": "Falha no teste de e-mail",
     "mail-test-ok": "Prova de email satisfatória",
@@ -959,7 +959,7 @@
     "missing-data-epigraph-group": "Faltando dados na epígrafe de grupo.",
     "missing-data-subaccount": "Falta dados na subconta.",
     "missing-epigraph-data": "Dados em epígrafe faltando.",
-    "missing-file": "Missing file",
+    "missing-file": "Falta o arquivo",
     "missing-file-help": "Parece que este arquivo não está presente na sua instalação. Talvez você não o utilize, mas <em>não pode removê-lo<\/em>.",
     "mobile": "mobile",
     "model": "Modelo",
@@ -975,7 +975,7 @@
     "month-4": "Abril",
     "month-5": "Maio",
     "month-6": "Junho",
-    "month-7": "Julio",
+    "month-7": "Julho",
     "month-8": "Agosto",
     "month-9": "Setembro",
     "month-name": "Nome do mês",
@@ -1020,7 +1020,7 @@
     "no-outstanding-amount": "no-outstanding-amount",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Sin referencia",
-    "no-selected-item": "no-selected-item",
+    "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem estoque",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
     "non-editable-columns": "Colunas não editáveis: %columns%",
@@ -1078,7 +1078,7 @@
     "order-email-text": "Olá, vai anexo a sua Nota de Encomenda\/Pedido %code%",
     "orders": "Pedidos",
     "origin": "origem",
-    "origin-warehouse": "Origin warehouse",
+    "origin-warehouse": "Armazém de origem",
     "original": "original",
     "original-file": "Fichero original",
     "other-data": "Outros dados",
@@ -1115,7 +1115,7 @@
     "payment-date": "Data de pagamento",
     "payment-days": "Dias de pagamento",
     "payment-method": "Método de pagamento",
-    "payment-methods": "Métodos de Pagamento",
+    "payment-methods": "Métodos de pagamento",
     "payments": "Pagamentos",
     "pct": "% pct",
     "pct-irpf": "% IRPF",
@@ -1223,7 +1223,7 @@
     "pvptotal-line-error": "Erro no valor de 'pvptotal' da linha %reference% do documento. Valor correto: %total%",
     "quantity": "Quantidade",
     "quantity-abb": "Quantidade-abrev",
-    "quantity-remaining": "Cantidad restante",
+    "quantity-remaining": "Quantidade restante",
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
     "randomizer-generating-more-items": "Gerando mais itens...",
@@ -1239,7 +1239,7 @@
     "rebuild-completed": "rebuild-completed",
     "rebuild-stock": "reconstruir-estoque",
     "receipt": "recibo",
-    "receipt-expense-account": "receipt-expense-account",
+    "receipt-expense-account": "Gastos no recibo %document%",
     "receipts": "Recibos",
     "record-deleted-correctly": "Registro excluído corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
@@ -1269,7 +1269,7 @@
     "regularization-operation": "Operação de regularização",
     "reject": "Rejeitar",
     "rejected": "rejeitado",
-    "related": "related",
+    "related": "relacionado",
     "related-subaccount-bank-charges": "Subconta relacionada para despesas bancárias (comissões, etc)",
     "related-subaccount-purchases-sales": "Subconta relacionada para compras e vendas",
     "reloading": "reloading",
@@ -1301,7 +1301,7 @@
     "respond": "Responder",
     "restore": "Restaurar",
     "restore-data": "Restaurar dados",
-    "result": "Result",
+    "result": "Resultado",
     "retention": "retention",
     "retentions": "Retentions",
     "review-date": "Data de revisão",
@@ -1438,10 +1438,10 @@
     "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
     "subaccount-irpf": "Conta para deduções",
     "subaccount-irpf-creditor": "Subconta de retenções para compras",
-    "subaccount-not-found": "Subconta 0 não encontrado.",
+    "subaccount-not-found": "Subconta %subAccountCode% não encontrada.",
     "subaccount-purchases": "Account for purchases",
     "subaccount-pyg-not-found": "subconta-pyg-não-encontrada",
-    "subaccount-sales": "Cuenta de ventas",
+    "subaccount-sales": "Conta de vendas",
     "subaccounts": "Subcontas",
     "subfamilies": "s",
     "subject": "Assunto",
@@ -1452,7 +1452,7 @@
     "sum-netos-line-tax-must-be": "A soma dos líquidos das linhas de IVA deve ser: %lineNet%",
     "sum-total-line-tax-must-be": "A soma dos impostos totais das linhas de IVA deve ser: %lineTotalTax%",
     "summary": "Resumo",
-    "sums-and-balances": "Sumas y saldos",
+    "sums-and-balances": "Somas e saldos",
     "sunday": "domingo",
     "supplied": "abastecido",
     "supplied-amount": "quantidade-fornecida",
@@ -1485,7 +1485,7 @@
     "symbol": "Símbolo",
     "table": "table",
     "table-checked": "Tabela 0 verificada.",
-    "table-not-found": "table-not-found",
+    "table-not-found": "Tabela %tableName% não encontrada",
     "table-size": "Tamanho da Tabela",
     "tables": "Tabelas",
     "task": "Tarefa",
@@ -1504,7 +1504,7 @@
     "telemetry-data-to-send": "dados de telemetria para enviar",
     "telephone-prefix": "Prefijo telefónico",
     "template": "Modelo",
-    "template-error": "template-error",
+    "template-error": "Erro de modelo",
     "template-not-found": "Modelo não encontrado",
     "templates": "Plantillas",
     "test": "Teste",
@@ -1586,7 +1586,7 @@
     "update-stock": "Atualizar estoque",
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
-    "updated-model": "Actualizado %model% (%key%) %desc%",
+    "updated-model": "Atualizado %model% (%key%) %desc%",
     "updater": "Updater",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
@@ -1607,7 +1607,7 @@
     "value": "Valor",
     "value-x": "value-x",
     "value-y": "value-y",
-    "values": "values",
+    "values": "Valores",
     "variables": "Variáveis",
     "variant": "Variant",
     "variants": "Variantes",
@@ -1629,7 +1629,7 @@
     "view-estimation": "Ver orçamento",
     "view-order": "Ver encomenda",
     "warehouse": "Armazém",
-    "warehouse-cant-be-same": "O armazém de origem e destino não pode ser o mesmo.",
+    "warehouse-cant-be-same": "O armazém de origem e destino não podem ser os mesmos.",
     "warehouse-must-be-same-business": "O armazém de origem e destino devem ser da mesma empresa",
     "warehouses": "Armazéns",
     "warning": "<b> Atenção <\/ b>",
@@ -1644,7 +1644,7 @@
     "wildcard": "Curinga",
     "wildcard-general-info": "Será substituído pelo valor correspondente",
     "wildcard-title": "Curingas substituíveis por valor",
-    "without-closure": "without-closure",
+    "without-closure": "sem fechamento",
     "without-domicile": "without-domicile",
     "without-groups": "Sem grupo",
     "without-regularization": "Sem regularização",
