--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -123,7 +123,7 @@
     "attribute-value-2": "Valor do atributo 2",
     "attribute-value-3": "Valor do atributo 3",
     "attribute-value-4": "Valor do atributo 4",
-    "attribute-values": "Attribute values",
+    "attribute-values": "Valores de atributo",
     "attributes": "Atributos",
     "audio": "Áudio",
     "august": "Agosto",
@@ -215,7 +215,7 @@
     "categories": "Categorías",
     "category": "Categoria",
     "cc": "CC",
-    "center": "Center",
+    "center": "Centro",
     "change": "mudança",
     "channel": "channel",
     "charge-date": "Data de cobrança",
@@ -266,7 +266,7 @@
     "colors": "colors",
     "column": "Coluna",
     "columns": "Columns",
-    "combination-code": "Combination code",
+    "combination-code": "Código de combinação",
     "combinations": "Combinações",
     "commercial-terms": "Termos comerciais",
     "commission": "commission",
@@ -367,7 +367,7 @@
     "customize": "Personalizar",
     "daily": "Daily",
     "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
-    "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
+    "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
     "dashboard": "painel de controle",
     "dashboard-backup": "Copia de seguridad",
@@ -410,8 +410,8 @@
     "default-to-user-email": "Por defecto al email del usuario",
     "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
-    "delete-all": "delete-all",
-    "delete-closing": "delete-closing",
+    "delete-all": "Eliminar tudo",
+    "delete-closing": "Eliminar fecho",
     "delete-data": "Eliminar dados",
     "delete-file": "Eliminar ficheiro",
     "delete-logs": "Eliminar historial",
@@ -505,12 +505,12 @@
     "email-not-sent": "Not sent",
     "email-notification": "Notificação por email",
     "email-notification-disabled": "A notificação por email %name% está desativada",
-    "email-notification-not-exists": "Notificación de email %name% no encontrada",
+    "email-notification-not-exists": "Notificação de email %name% não existe",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "email-replies-to",
     "email-sent": "Email enviado",
     "email-sent-to": "Email enviado para %email%",
-    "email-signature": "email-signature",
+    "email-signature": "Assinatura de email",
     "email-to": "Email To",
     "emails": "Emails",
     "emails-sent": "emails-sent",
@@ -556,7 +556,7 @@
     "es-tax-exception-e6": "E",
     "es-tax-regime-agrarian": "R",
     "es-tax-regime-cash-criteria": "Criterio de caixa",
-    "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-especial-agp": "Régimen especial da agricultura, pecuária e pesca",
     "es-tax-regime-exempt": "Exento",
     "es-tax-regime-general": "Régimen general",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
@@ -600,7 +600,7 @@
     "family-code": "Código familiar",
     "fax": "Fax",
     "february": "Fevereiro",
-    "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
+    "field-can-not-be-null": "Campo %fieldName% na tabela %tableName% não pode ser nulo",
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
@@ -959,7 +959,7 @@
     "missing-data-epigraph-group": "Faltando dados na epígrafe de grupo.",
     "missing-data-subaccount": "Falta dados na subconta.",
     "missing-epigraph-data": "Os dados estão faltando na epígrafe.",
-    "missing-file": "Missing file",
+    "missing-file": "Falta o arquivo",
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
     "mobile": "mobile",
     "model": "Modelo",
@@ -1020,7 +1020,7 @@
     "no-outstanding-amount": "no-outstanding-amount",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
     "no-reference": "Sin referencia",
-    "no-selected-item": "no-selected-item",
+    "no-selected-item": "Nenhum item selecionado",
     "no-stock": "Sem estoque",
     "non-editable-accounting-entry": "non-editable-accounting-entry",
     "non-editable-columns": "Colunas não editáveis: %columns%",
@@ -1078,7 +1078,7 @@
     "order-email-text": "Olá, vai anexo a sua Nota de Encomenda\/Pedido %code%",
     "orders": "Pedidos",
     "origin": "origin",
-    "origin-warehouse": "Origin warehouse",
+    "origin-warehouse": "Armazém de origem",
     "original": "original",
     "original-file": "Fichero original",
     "other-data": "Outros dados",
@@ -1239,7 +1239,7 @@
     "rebuild-completed": "rebuild-completed",
     "rebuild-stock": "reconstruir-estoque",
     "receipt": "receipt",
-    "receipt-expense-account": "receipt-expense-account",
+    "receipt-expense-account": "Gastos no recibo %document%",
     "receipts": "receipts",
     "record-deleted-correctly": "Registro eliminado corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
@@ -1281,7 +1281,7 @@
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
-    "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
+    "renumber-accounting-p": "Renumerar lançamentos por data, de menor a maior",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
     "renumber-invoices-success": "As faturas do exercício '%exercise%' foram renumeradas com sucesso",
     "repeat-new-password": "Repita a senha",
@@ -1325,7 +1325,7 @@
     "sdk": "sdk",
     "search": "Pesquisa",
     "search-document": "Digite o número de %doctype% para pesquisar.",
-    "search-product": "Search product",
+    "search-product": "Procurar produto",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo Trimestre",
@@ -1437,7 +1437,7 @@
     "subaccount-bad-codcuenta": "A",
     "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
     "subaccount-irpf": "Conta para deduções",
-    "subaccount-irpf-creditor": "subaccount-irpf-creditor",
+    "subaccount-irpf-creditor": "sub-conta de retenção para compras",
     "subaccount-not-found": "Subconta 0 não encontrado.",
     "subaccount-purchases": "Account for purchases",
     "subaccount-pyg-not-found": "subconta-pyg-não-encontrada",
@@ -1485,7 +1485,7 @@
     "symbol": "Símbolo",
     "table": "table",
     "table-checked": "Tabela 0 verificada.",
-    "table-not-found": "table-not-found",
+    "table-not-found": "Tabela %tableName% não encontrada",
     "table-size": "Tamanho da Tabela",
     "tables": "Tabelas",
     "task": "Tarefa",
@@ -1504,7 +1504,7 @@
     "telemetry-data-to-send": "dados de telemetria para enviar",
     "telephone-prefix": "Prefijo telefónico",
     "template": "Modelo",
-    "template-error": "template-error",
+    "template-error": "Erro de modelo",
     "template-not-found": "Modelo não encontrado",
     "templates": "Plantillas",
     "test": "Test",
