--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -205,7 +205,7 @@
     "cant-load-controller": "No es pot carregar el controlador '%controllerName%'.",
     "cant-modify-reference": "No es pot modificar la referència.",
     "cant-remove-accounting-entry": "No es pot eliminar l'assentament",
-    "cant-remove-invoice-refund": "No es pot eliminar una factura que ja té rectificativa (devolució)",
+    "cant-remove-invoice-refund": "No es pot eliminar una factura que ja té una rectificativa (devolució)",
     "cant-remove-receipt": "No es pot eliminar el rebut",
     "cant-update-audit-log": "No es pot modificar un registre d'auditoria",
     "card": "Targeta",
@@ -818,7 +818,7 @@
     "journal-opening": "Diari d'obertura",
     "journals": "Diaris",
     "july": "Julio",
-    "june": "Junio",
+    "june": "Juny",
     "justified": "justified",
     "key-google-maps": "Clau de Google Maps",
     "keys": "Claus",
@@ -951,7 +951,7 @@
     "meta-description": "FacturaScripts és un software de facturació i contabilitat per a xicotetes i mitjanes empreses. És software lliure baix la llicència GNU\/LGPL.",
     "method-payment": "Forma de pagament",
     "mime-type": "Mime Type",
-    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-with-cifnif": "Import mínim amb CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínim import sense CIF\/NIF",
     "minimum-stock": "Estoc mínim",
     "minutes": "Minutes",
@@ -1041,7 +1041,7 @@
     "notes": "Notes",
     "notice": "Aviso",
     "notices": "Avisos",
-    "notification": "Notificación",
+    "notification": "Notificació",
     "notifications": "Notificaciones",
     "november": "Noviembre",
     "number": "Número",
@@ -1148,7 +1148,7 @@
     "plugin-deleted": "El Plugin %pluginName% s'ha aliminat correctament.",
     "plugin-disabled": "El Plugin %pluginName% s'ha desactivat correctament.",
     "plugin-enabled": "El Plugin %pluginName% s'ha activat correctament.",
-    "plugin-file-too-big": "Aquest servidor no permet pujar arxius de més de %size% MB. Si us plau, augmenta la mida màxima de pujada d'arxius en PHP o copia l'arxiu a la carpeta Plugins.",
+    "plugin-file-too-big": "Aquest servidor no permet pujar arxius de més de %size% MB. Si us plau, augmenta la mida màxima de pujada d'arxius en PHP o copia l'arxiu a la carpeta de Plugins.",
     "plugin-installation-disabled": "L'instalacion de complements està deshabilitada en este servidor",
     "plugin-installed": "S'ha instalat el Plugin '%pluginName%'",
     "plugin-need-update": "El plugin %plugin% necessitarà actualització per a funcionar amb la nova versió de FacturaScripts.",
@@ -1249,7 +1249,7 @@
     "recreate-system-integrity": "Tornar a crear l'integritat del sistema",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
-    "rectified-invoices": "Facturas rectificativas",
+    "rectified-invoices": "Factures rectificatives",
     "rectifying": "Rectificativa",
     "rectifying-serie": "Sèrie rectificativa",
     "redirect": "Redirección",
@@ -1258,7 +1258,7 @@
     "refresh": "Recarregar",
     "refresh-page": "Recarregar la pàgina",
     "refund-amount": "Cantidad devuelta",
-    "refund-payment-concept": "Devolución del recibo %document%",
+    "refund-payment-concept": "Devolució del rebut %document%",
     "refunds": "Devolucions",
     "register": "Registrar",
     "register-installation": "Registrar l'instalació",
@@ -1350,9 +1350,9 @@
     "sent-a-audio": "Va enviar un àudio",
     "sent-a-document": "Envià un document",
     "sent-a-location": "Has enviat una ubicació",
-    "sent-a-picture": "Envió una imagen",
+    "sent-a-picture": "Envià una imatge",
     "sent-a-video": "Envió un video",
-    "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-message-by": "Enviat per %nick% el %date%",
     "sepa-suffix": "Sufix SEPA",
     "september": "Setembre",
     "sequences": "Sequències",
@@ -1397,7 +1397,7 @@
     "social-security-number": "Número de la Seguritat Social",
     "sort": "Orde",
     "sort-by-column": "Ordenar por columna",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-asc": "Ordenar por fecha ascendente",
     "sort-by-date-desc": "Ordenar per data desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referencia desc.",
@@ -1524,7 +1524,7 @@
     "thousands-separator": "Separador de millars",
     "thursday": "thursday",
     "ticket": "Ticket",
-    "tickets": "Tickets",
+    "tickets": "Tiquets",
     "time": "Hora",
     "timezone": "Selecciona la zona horària",
     "title": "Títul",
